@@ -34,6 +34,8 @@ Build-Depends: debhelper (>= 7.4.2~),
  libfuse-dev (>= 2.8.4-1.4) [linux-any kfreebsd-any],
  ttf-dejavu-core,
  liblzma-dev,
+ dosfstools [amd64],
+ mtools [amd64],
 Build-Conflicts: autoconf2.13, libzfs-dev, libnvpair-dev
 Standards-Version: 3.8.4
 Homepage: http://www.gnu.org/software/grub/
