@@ -327,8 +327,23 @@ endif
 override_dh_gencontrol:
 	dh_gencontrol -- -Vlegacy-doc-conflicts="$(LEGACY_DOC_CONFLICTS)"
 
+TARNAME := grub2_$(deb_version)_$(DEB_HOST_ARCH).tar.gz
+
 override_dh_builddeb:
 	dh_builddeb -- -Zxz
+ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
+ifeq ($(DEB_HOST_ARCH),amd64)
+	debian/build-efi-images \
+		build/grub-$(COMMON_PLATFORM)/grub-mkimage \
+		build/grub-efi-amd64/grub-core \
+		debian/grub2-images/$(deb_version) \
+		x86_64-efi x64
+	echo $(deb_version) \
+		> debian/grub2-images/$(deb_version)/version
+	cd debian/grub2-images && tar czvf ../../../$(TARNAME) .
+	dpkg-distaddfile $(TARNAME) raw-uefi -
+endif
+endif
 
 override_dh_auto_clean:
 	-rm -rf build
@@ -344,6 +359,11 @@ override_dh_clean: debian/legacy/update-grub debian/grub-extras
 		rm -f debian/grub-{pc,efi-*,ieee1275,coreboot,yeeloong,emu}{,-bin,-dbg}.$$i ; \
 	done
 	rm -rf debian/tmp-*/
+ifeq (yes,$(shell dpkg-vendor --derives-from Ubuntu && echo yes))
+ifeq ($(DEB_HOST_ARCH),amd64)
+	rm -rf debian/grub2-images
+endif
+endif
 
 	# make sure PO files are always up-to-date
 	debconf-updatepo
