@@ -20,6 +20,7 @@ grub2 (2.00-13) UNRELEASED; urgency=low
       ExitBootServices.  Otherwise, linux will fall through to previous
       code, call ExitBootServices itself, and boot the kernel normally.
     - Generate configuration for signed UEFI kernels if available.
+    - On Ubuntu amd64, add a raw-uefi custom upload tarball for signing.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 28 Jan 2013 11:08:07 +0000
 
